package com.aetxabao.invasoresfx.sprite;

import com.aetxabao.invasoresfx.sprite.weaponry.AShot;

import java.util.ArrayList;
public interface ICanShoot {

    ArrayList<AShot> shoot();

}
