package com.aetxabao.invasoresfx.sprite;

public interface IHaveShield {

    boolean impact();

}
